[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/Sprites/James_01.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerMovement.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/overlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Enemy1.gd" type="Script" id=4]
[ext_resource path="res://assets/Tiles/Portal/portal_1.png" type="Texture" id=5]
[ext_resource path="res://assets/Tiles/Portal/portal_0.png" type="Texture" id=6]
[ext_resource path="res://assets/Tiles/BiggerTiles/biggertile_10.png" type="Texture" id=7]
[ext_resource path="res://assets/Tiles/BiggerTiles/biggertile_09.png" type="Texture" id=8]
[ext_resource path="res://assets/Tiles/BiggerTiles/biggertile_16.png" type="Texture" id=9]
[ext_resource path="res://assets/Tiles/BiggerTiles/biggertile_12.png" type="Texture" id=10]
[ext_resource path="res://assets/Tiles/BiggerTiles/biggertile_17.png" type="Texture" id=11]
[ext_resource path="res://assets/Tiles/BiggerTiles/biggertile_15.png" type="Texture" id=12]
[ext_resource path="res://assets/Tiles/BiggerTiles/biggertile_11.png" type="Texture" id=13]
[ext_resource path="res://assets/Sprites/Enemy/enemy_big.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 21 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 92 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.5, 96 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 96, 19 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 965, 238.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 278, 547 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 968.5, 219.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 309.5, 547 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 24.5, 51.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 144.557, 67.6913 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 144.557, 67.6913 )

[node name="Node2D" type="Node2D"]

[node name="RandomTeleporter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RandomTeleporter"]
position = Vector2( 964, 11 )
z_index = 1
shape = SubResource( 1 )

[node name="RandomTeleporter2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RandomTeleporter2"]
position = Vector2( 4, 524 )
z_index = 1
shape = SubResource( 2 )

[node name="StartTeleporter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartTeleporter"]
position = Vector2( 1906.5, 520 )
z_index = 1
shape = SubResource( 3 )

[node name="StartTeleporter2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartTeleporter2"]
position = Vector2( 960, 1067 )
z_index = 1
shape = SubResource( 4 )

[node name="Overlay" parent="." instance=ExtResource( 3 )]

[node name="Background" type="Node2D" parent="."]

[node name="Biggertile09" type="Sprite" parent="Background"]
position = Vector2( 96, 992 )
texture = ExtResource( 8 )

[node name="Biggertile10" type="Sprite" parent="Background"]
position = Vector2( 288, 992 )
texture = ExtResource( 8 )

[node name="Biggertile11" type="Sprite" parent="Background"]
position = Vector2( 480, 992 )
texture = ExtResource( 7 )

[node name="Biggertile12" type="Sprite" parent="Background"]
position = Vector2( 96, 800 )
rotation = 1.57079
texture = ExtResource( 7 )

[node name="Biggertile13" type="Sprite" parent="Background"]
position = Vector2( 288, 800 )
texture = ExtResource( 8 )

[node name="Biggertile14" type="Sprite" parent="Background"]
position = Vector2( 480, 800 )
texture = ExtResource( 8 )

[node name="Biggertile15" type="Sprite" parent="Background"]
position = Vector2( 672, 992 )
texture = ExtResource( 8 )

[node name="Biggertile16" type="Sprite" parent="Background"]
position = Vector2( 672, 800 )
texture = ExtResource( 8 )

[node name="Biggertile17" type="Sprite" parent="Background"]
position = Vector2( 96, 608 )
texture = ExtResource( 8 )

[node name="Biggertile18" type="Sprite" parent="Background"]
position = Vector2( 864, 992 )
texture = ExtResource( 8 )

[node name="Biggertile19" type="Sprite" parent="Background"]
position = Vector2( 1056, 992 )
texture = ExtResource( 7 )

[node name="Biggertile20" type="Sprite" parent="Background"]
position = Vector2( 864, 800 )
texture = ExtResource( 8 )

[node name="Biggertile21" type="Sprite" parent="Background"]
position = Vector2( 1056, 800 )
texture = ExtResource( 8 )

[node name="Biggertile22" type="Sprite" parent="Background"]
position = Vector2( 1248, 992 )
texture = ExtResource( 8 )

[node name="Biggertile23" type="Sprite" parent="Background"]
position = Vector2( 1248, 800 )
texture = ExtResource( 8 )

[node name="Biggertile24" type="Sprite" parent="Background"]
position = Vector2( 1440, 992 )
texture = ExtResource( 8 )

[node name="Biggertile25" type="Sprite" parent="Background"]
position = Vector2( 1632, 992 )
texture = ExtResource( 8 )

[node name="Biggertile26" type="Sprite" parent="Background"]
position = Vector2( 1440, 800 )
rotation = -1.57079
texture = ExtResource( 7 )

[node name="Biggertile27" type="Sprite" parent="Background"]
position = Vector2( 1632, 800 )
texture = ExtResource( 8 )

[node name="Biggertile28" type="Sprite" parent="Background"]
position = Vector2( 1824, 800 )
texture = ExtResource( 8 )

[node name="Biggertile29" type="Sprite" parent="Background"]
position = Vector2( 1824, 992 )
rotation = -3.14159
texture = ExtResource( 7 )

[node name="Biggertile30" type="Sprite" parent="Background"]
position = Vector2( 288, 608 )
texture = ExtResource( 8 )

[node name="Biggertile31" type="Sprite" parent="Background"]
position = Vector2( 480, 608 )
texture = ExtResource( 7 )

[node name="Biggertile32" type="Sprite" parent="Background"]
position = Vector2( 672, 608 )
texture = ExtResource( 8 )

[node name="Biggertile33" type="Sprite" parent="Background"]
position = Vector2( 864, 608 )
rotation = 1.57079
texture = ExtResource( 7 )

[node name="Biggertile34" type="Sprite" parent="Background"]
position = Vector2( 1056, 608 )
texture = ExtResource( 8 )

[node name="Biggertile35" type="Sprite" parent="Background"]
position = Vector2( 1248, 608 )
texture = ExtResource( 8 )

[node name="Biggertile36" type="Sprite" parent="Background"]
position = Vector2( 1440, 608 )
texture = ExtResource( 8 )

[node name="Biggertile37" type="Sprite" parent="Background"]
position = Vector2( 1632, 608 )
texture = ExtResource( 8 )

[node name="Biggertile38" type="Sprite" parent="Background"]
position = Vector2( 1824, 608 )
texture = ExtResource( 7 )

[node name="Biggertile39" type="Sprite" parent="Background"]
position = Vector2( 1824, 416 )
texture = ExtResource( 8 )

[node name="Biggertile40" type="Sprite" parent="Background"]
position = Vector2( 1632, 416 )
texture = ExtResource( 8 )

[node name="Biggertile41" type="Sprite" parent="Background"]
position = Vector2( 1248, 416 )
texture = ExtResource( 8 )

[node name="Biggertile42" type="Sprite" parent="Background"]
position = Vector2( 1440, 416 )
texture = ExtResource( 7 )

[node name="Biggertile43" type="Sprite" parent="Background"]
position = Vector2( 1056, 416 )
texture = ExtResource( 8 )

[node name="Biggertile44" type="Sprite" parent="Background"]
position = Vector2( 864, 416 )
texture = ExtResource( 8 )

[node name="Biggertile45" type="Sprite" parent="Background"]
position = Vector2( 672, 416 )
texture = ExtResource( 8 )

[node name="Biggertile46" type="Sprite" parent="Background"]
position = Vector2( 480, 416 )
texture = ExtResource( 8 )

[node name="Biggertile47" type="Sprite" parent="Background"]
position = Vector2( 288, 416 )
texture = ExtResource( 8 )

[node name="Biggertile48" type="Sprite" parent="Background"]
position = Vector2( 96, 416 )
texture = ExtResource( 7 )

[node name="Biggertile49" type="Sprite" parent="Background"]
position = Vector2( 96, 224 )
texture = ExtResource( 8 )

[node name="Biggertile50" type="Sprite" parent="Background"]
position = Vector2( 288, 224 )
texture = ExtResource( 8 )

[node name="Biggertile51" type="Sprite" parent="Background"]
position = Vector2( 480, 224 )
texture = ExtResource( 8 )

[node name="Biggertile52" type="Sprite" parent="Background"]
position = Vector2( 672, 224 )
texture = ExtResource( 7 )

[node name="Biggertile53" type="Sprite" parent="Background"]
position = Vector2( 864, 224 )
texture = ExtResource( 8 )

[node name="Biggertile54" type="Sprite" parent="Background"]
position = Vector2( 1056, 224 )
rotation = -3.14159
texture = ExtResource( 7 )

[node name="Biggertile55" type="Sprite" parent="Background"]
position = Vector2( 1248, 224 )
texture = ExtResource( 8 )

[node name="Biggertile56" type="Sprite" parent="Background"]
position = Vector2( 1440, 224 )
texture = ExtResource( 8 )

[node name="Biggertile57" type="Sprite" parent="Background"]
position = Vector2( 1632, 224 )
texture = ExtResource( 8 )

[node name="Biggertile58" type="Sprite" parent="Background"]
position = Vector2( 1824, 224 )
texture = ExtResource( 8 )

[node name="Biggertile59" type="Sprite" parent="Background"]
position = Vector2( 1824, 32 )
rotation = -3.14159
texture = ExtResource( 7 )

[node name="Biggertile60" type="Sprite" parent="Background"]
position = Vector2( 1632, 32 )
texture = ExtResource( 8 )

[node name="Biggertile61" type="Sprite" parent="Background"]
position = Vector2( 1248, 32 )
texture = ExtResource( 8 )

[node name="Biggertile62" type="Sprite" parent="Background"]
position = Vector2( 1440, 32 )
texture = ExtResource( 7 )

[node name="Biggertile63" type="Sprite" parent="Background"]
position = Vector2( 1056, 32 )
texture = ExtResource( 8 )

[node name="Biggertile64" type="Sprite" parent="Background"]
position = Vector2( 864, 32 )
texture = ExtResource( 8 )

[node name="Biggertile65" type="Sprite" parent="Background"]
position = Vector2( 672, 32 )
texture = ExtResource( 8 )

[node name="Biggertile66" type="Sprite" parent="Background"]
position = Vector2( 480, 32 )
texture = ExtResource( 8 )

[node name="Biggertile67" type="Sprite" parent="Background"]
position = Vector2( 288, 32 )
rotation = -1.57079
texture = ExtResource( 7 )

[node name="Biggertile68" type="Sprite" parent="Background"]
position = Vector2( 96, 32 )
texture = ExtResource( 8 )

[node name="Biggertile69" type="Sprite" parent="Background"]
position = Vector2( 200, 840 )
texture = ExtResource( 13 )

[node name="Biggertile70" type="Sprite" parent="Background"]
position = Vector2( 768, 960 )
texture = ExtResource( 13 )

[node name="Biggertile71" type="Sprite" parent="Background"]
position = Vector2( 1200, 728 )
texture = ExtResource( 13 )

[node name="Biggertile72" type="Sprite" parent="Background"]
position = Vector2( 160, 264 )
texture = ExtResource( 13 )

[node name="Biggertile73" type="Sprite" parent="Background"]
position = Vector2( 528, 264 )
texture = ExtResource( 13 )

[node name="Biggertile74" type="Sprite" parent="Background"]
position = Vector2( 1344, 136 )
texture = ExtResource( 13 )

[node name="Biggertile75" type="Sprite" parent="Background"]
position = Vector2( 1624, 608 )
texture = ExtResource( 13 )

[node name="Biggertile76" type="Sprite" parent="Background"]
position = Vector2( 1624, 912 )
texture = ExtResource( 10 )

[node name="Biggertile77" type="Sprite" parent="Background"]
position = Vector2( 400, 672 )
texture = ExtResource( 10 )

[node name="Biggertile78" type="Sprite" parent="Background"]
position = Vector2( 1256, 368 )
texture = ExtResource( 10 )

[node name="Biggertile79" type="Sprite" parent="Background"]
position = Vector2( 1752, 192 )
texture = ExtResource( 10 )

[node name="Biggertile80" type="Sprite" parent="Background"]
position = Vector2( 360, 112 )
texture = ExtResource( 12 )

[node name="Biggertile81" type="Sprite" parent="Background"]
position = Vector2( 1360, 952 )
texture = ExtResource( 12 )

[node name="Biggertile82" type="Sprite" parent="Background"]
position = Vector2( 1568, 168 )
rotation = 0.523598
texture = ExtResource( 9 )

[node name="Biggertile84" type="Sprite" parent="Background"]
position = Vector2( 664, 528 )
scale = Vector2( 0.708333, 0.708333 )
texture = ExtResource( 11 )

[node name="Biggertile85" type="Sprite" parent="Background"]
position = Vector2( 1360, 560 )
scale = Vector2( 0.708333, 0.708333 )
texture = ExtResource( 11 )

[node name="Biggertile86" type="Sprite" parent="Background"]
position = Vector2( 296, 304 )
scale = Vector2( 0.708333, 0.708333 )
texture = ExtResource( 11 )

[node name="Biggertile87" type="Sprite" parent="Background"]
position = Vector2( 1720, 784 )
scale = Vector2( 0.708333, 0.708333 )
texture = ExtResource( 11 )

[node name="Biggertile88" type="Sprite" parent="Background"]
position = Vector2( 1768, 328 )
scale = Vector2( 0.708333, 0.708333 )
texture = ExtResource( 11 )

[node name="Biggertile83" type="Sprite" parent="Background"]
position = Vector2( 296, 952 )
scale = Vector2( 0.708333, 0.708333 )
texture = ExtResource( 11 )

[node name="Portals" type="Node2D" parent="."]

[node name="Portal0" type="Sprite" parent="Portals"]
position = Vector2( 960, 40 )
rotation = -1.57079
texture = ExtResource( 6 )

[node name="Portal1" type="Sprite" parent="Portals"]
position = Vector2( 963, 1032 )
rotation = -1.57079
texture = ExtResource( 5 )

[node name="Right_Portal" type="Sprite" parent="Portals"]
position = Vector2( 1888, 520 )
texture = ExtResource( 6 )

[node name="Left_Portal" type="Sprite" parent="Portals"]
position = Vector2( 32, 520 )
texture = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="Portals"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portals/StaticBody2D"]
position = Vector2( 955, -242.5 )
shape = SubResource( 6 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Portals"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portals/StaticBody2D2"]
position = Vector2( -282, 537 )
shape = SubResource( 7 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Portals"]
position = Vector2( -5, 537 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portals/StaticBody2D3"]
position = Vector2( 961.5, 762.5 )
shape = SubResource( 8 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Portals"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portals/StaticBody2D4"]
position = Vector2( 2229.5, 537 )
shape = SubResource( 9 )

[node name="PlayerBody" type="KinematicBody2D" parent="."]
position = Vector2( 880, 416 )
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PlayerBody"]
position = Vector2( 6.10352e-05, 3.05176e-05 )
scale = Vector2( 0.9375, 0.9375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
shape = SubResource( 10 )

[node name="Enemy1" type="KinematicBody2D" parent="."]
position = Vector2( -1024, -452 )
z_index = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Enemy1"]
rotation = 0.00152647
texture = ExtResource( 14 )

[node name="Enemy2" type="Area2D" parent="Enemy1"]
rotation = 1.57246
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy1/Enemy2"]
shape = SubResource( 11 )

[node name="Enemy2" type="KinematicBody2D" parent="."]
position = Vector2( 1426, 741 )
z_index = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Enemy2"]
rotation = 0.00152647
texture = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemy2" type="Area2D" parent="Enemy2"]
rotation = 1.57246
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy2/Enemy2"]
shape = SubResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="RandomTeleporter" to="PlayerBody" method="_on_RandomTeleporter_body_entered"]
[connection signal="body_entered" from="RandomTeleporter2" to="PlayerBody" method="_on_RandomTeleporter2_body_entered"]
[connection signal="body_entered" from="StartTeleporter" to="PlayerBody" method="_on_StartTeleporter_body_entered"]
[connection signal="body_entered" from="StartTeleporter2" to="PlayerBody" method="_on_StartTeleporter2_body_entered"]
[connection signal="body_entered" from="Enemy1/Enemy2" to="PlayerBody" method="_on_Enemy2_body_entered"]
[connection signal="body_entered" from="Enemy2/Enemy2" to="PlayerBody" method="_on_Enemy2_body_entered"]
