[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Sprites/James_01.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerMovement.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/overlay.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.5, 51.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 541 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.5, 547.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 975.5, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 961, 7 )

[node name="Node2D" type="Node2D"]

[node name="PlayerBody" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="PlayerBody"]
position = Vector2( 937, 448 )
scale = Vector2( 0.9375, 0.9375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
position = Vector2( 938, 448 )
shape = SubResource( 1 )

[node name="RandomTeleporter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RandomTeleporter"]
position = Vector2( 1.5, 531 )
shape = SubResource( 2 )

[node name="Safe2Teleporter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Safe2Teleporter"]
position = Vector2( 1922.5, 540.5 )
shape = SubResource( 3 )

[node name="Safe4Teleporter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Safe4Teleporter"]
position = Vector2( 965.5, 0 )
shape = SubResource( 4 )

[node name="RandomTeleporter2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RandomTeleporter2"]
position = Vector2( 957, 1077 )
shape = SubResource( 5 )

[node name="Overlay" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="RandomTeleporter" to="PlayerBody" method="_on_RandomTeleporter_body_entered"]
[connection signal="body_entered" from="Safe2Teleporter" to="PlayerBody" method="_on_Safe2Teleporter_body_entered"]
[connection signal="body_entered" from="Safe4Teleporter" to="PlayerBody" method="_on_Safe4Teleporter_body_entered"]
[connection signal="body_entered" from="RandomTeleporter2" to="PlayerBody" method="_on_RandomTeleporter2_body_entered"]
