[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/PlayerMovement.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/James_01.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.5, 51.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 554.121 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 976.5, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 970, 10.9526 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 148.856, 551.632 )

[node name="safe1" type="Node2D"]
scale = Vector2( 1, 1.00433 )

[node name="PlayerBody" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="PlayerBody"]
position = Vector2( 937, 448 )
scale = Vector2( 0.9375, 0.9375 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
position = Vector2( 938, 448 )
shape = SubResource( 1 )

[node name="RandomTeleporter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RandomTeleporter"]
position = Vector2( 0, 544.121 )
shape = SubResource( 2 )

[node name="Safe2Teleporter" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Safe2Teleporter"]
position = Vector2( 966.5, 0 )
shape = SubResource( 3 )

[node name="StartTeleporter" type="Area2D" parent="."]
position = Vector2( 966.5, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartTeleporter"]
position = Vector2( 0.5, 1082.31 )
shape = SubResource( 4 )

[node name="RandomTeleporter3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RandomTeleporter3"]
position = Vector2( 1939, 617.326 )
rotation = 3.14159
scale = Vector2( 0.266239, 2.73639 )
shape = SubResource( 5 )

[connection signal="body_entered" from="RandomTeleporter" to="PlayerBody" method="_on_RandomTeleporter_body_entered"]
[connection signal="body_entered" from="Safe2Teleporter" to="PlayerBody" method="_on_Safe2Teleporter_body_entered"]
[connection signal="body_entered" from="StartTeleporter" to="PlayerBody" method="_on_StartTeleporter_body_entered"]
[connection signal="body_entered" from="RandomTeleporter3" to="PlayerBody" method="_on_RandomTeleporter3_body_entered"]
