[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Sprites/James_01.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerMovement.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.5, 51.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 970.5, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 547.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10.5, 553.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 963.25, 7.5 )

[node name="Node2D" type="Node2D"]

[node name="PlayerBody" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="PlayerBody"]
position = Vector2( 937, 448 )
scale = Vector2( 0.9375, 0.9375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
position = Vector2( 938, 448 )
shape = SubResource( 1 )

[node name="RandomTeleporter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RandomTeleporter"]
position = Vector2( 960.5, 0 )
shape = SubResource( 2 )

[node name="Safe5Teleporter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Safe5Teleporter"]
position = Vector2( 0.5, 537.5 )
shape = SubResource( 3 )

[node name="Safe3Teleporter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Safe3Teleporter"]
position = Vector2( 1922.5, 543.5 )
shape = SubResource( 4 )

[node name="RandomTeleporter2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RandomTeleporter2"]
position = Vector2( 964.75, 1080.5 )
shape = SubResource( 5 )

[connection signal="body_entered" from="RandomTeleporter" to="PlayerBody" method="_on_RandomTeleporter_body_entered"]
[connection signal="body_entered" from="Safe5Teleporter" to="PlayerBody" method="_on_Safe5Teleporter_body_entered"]
[connection signal="body_entered" from="Safe3Teleporter" to="PlayerBody" method="_on_Safe3Teleporter_body_entered"]
[connection signal="body_entered" from="RandomTeleporter2" to="PlayerBody" method="_on_RandomTeleporter2_body_entered"]
